# FoFreeXit

./: .gitignore  Cargo.toml  README.md  final target and rule.md
.github/workflows/: build-windows.yml
app/src/: index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
corpus/: README.md
crates/ff-cli/: Cargo.toml
crates/ff-cli/src/: main.rs
crates/ff-cos/: Cargo.toml
crates/ff-cos/src/: lib.rs
crates/ff-engine/: Cargo.toml
crates/ff-engine/src/: annot.rs  convert.rs  edit.rs  fontmatch.rs  form.rs  lib.rs  meta.rs  ocr.rs  organize.rs  qpdf.rs  redact.rs  render.rs  sign.rs  text.rs  watermark.rs
crates/ff-engine/tests/: annot_roundtrip.rs  big_doc.rs  edit_roundtrip.rs  form_roundtrip.rs  ocr_convert_roundtrip.rs  organize_roundtrip.rs  qpdf_safety.rs  redact_roundtrip.rs  render_smoke.rs  security_roundtrip.rs  sign_roundtrip.rs  viewer_features.rs  watermark_roundtrip.rs
crates/ff-pdmodel/: Cargo.toml
crates/ff-pdmodel/src/: lib.rs
docs/: 01-research.md  02-tech-stack.md  03-roadmap.md  04-architecture.md  05-dev-setup.md  06-phase1-summary.md  07-phase1-user-tests.md  08-phase2-summary.md  09-phase2-user-tests.md  10-phase3-summary.md  11-phase3-user-tests.md  12-phase4-summary.md  13-phase4-user-tests.md  14-foxit-gap-analysis.md  15-phase5-summary.md  16-phase5-user-tests.md  17-phase6-summary.md  18-phase6-user-tests.md  19-phase7-summary.md  20-phase7-user-tests.md
scripts/: fetch-pdfium.ps1  fetch-qpdf.ps1  portable-readme.txt
