[package]
name = "fofreexit-app"
version = "0.1.0"
edition = "2021"
description = "FoFreeXit desktop app (Tauri shell)"
license = "Apache-2.0"

# Detach from the main crates/* workspace (Tauri uses its own build profiles).
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
pdfium-render = "0.8"
lopdf = "0.36"
ff-engine = { path = "../../crates/ff-engine" }

[profile.release]
opt-level = "s"
lto = true
strip = true
