[package]
name = "ff-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FoFreeXit engine: render/edit/io over PDFium + QPDF"

[dependencies]
ff-cos = { path = "../ff-cos" }
ff-pdmodel = { path = "../ff-pdmodel" }
anyhow.workspace = true
thiserror.workspace = true
pdfium-render = "0.8"
image = "0.25"
lopdf = "0.36"
ttf-parser = "0.25"
# Phase 5 iteration 2 — chữ ký số (PKCS#7/CMS detached, RSA-SHA256):
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
cms = { version = "0.2", features = ["builder"] }
x509-cert = { version = "0.2", features = ["builder"] }
rcgen = "0.13"
pkcs8 = { version = "0.10", features = ["pem"] }
der = "0.7"
spki = "0.7"
signature = "2"
const-oid = { version = "0.9", features = ["db"] }
